# PolarRoute

./: .gitignore  BSOSE_loading.ipynb  Example_AllWaypointsRegion.ipynb  Example_SmallCoastal.ipynb  LICENSE  MANIFEST.in  ModisWaypoints.csv  Modis_Testing.ipynb  README.md  example(refactor).ipynb  example.ipynb  example_featureLocation.ipynb  pyproject.toml  requirements.txt  routePlanner.yml  setup.py  testing.ipynb  xarrayTest.ipynb
.github/: pull_request_template.md
Examples/: AllWaypoints.ipynb  CellBox_Construction&Plotting.ipynb  CellBox_FeatureLocation.ipynb  Example.ipynb  FrSt_geo.json  LegacyShipPathways.ipynb  NewtonSplit_Test.ipynb  PathSmoothing.ipynb  PathSmoothing_Longitude.ipynb  Pathways_AllWaypointsRegion.ipynb  Pathways_SmallCoastal.ipynb  SDAPath.ipynb  SmallRegion.ipynb  TemporalCellGrid_Example.ipynb  TestExample_ArgSea_MargBay.ipynb  TestExample_ArgentineSea_MargueriteBay.ipynb  TestExample_Falklands_SouthGeorgia.ipynb  TestExample_LongPaths.ipynb  WayPointsLog.csv  config.json
JSON_creators/: currentPointCreation.ipynb  icePointCreation.ipynb
PreProcessing/: currentPointCreation.ipynb  icePointCreation.ipynb
RoutePlanner/: CellBox.py  CellGrid.py  Function.py  IO.py  Mesh.py  Optimisation.py  Path.py  Plot.py  TemporalCellGrid.py  __init__.py  crossing.py  data_loaders.py  optimisation.py  plot.py  route_planner.py  setup.py  speed.py  vehicle_accessibility.py  vessel_performance.py
RoutePlanner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: index.html  requirements.txt
examples/: README.md  config.json  config.mem.json  waypoints.csv  waypoints_example.csv
exec/: meshing.py  routeplanner.py  routes.py  vehiclespecs.py
html/: genindex.html  py-modindex.html  searchindex.js
polar_route/: AggregatedCellBox.py  AggregatedJGridCellBox.py  Boundary.py  DataLoader.py  DataLoader_test.py  Direction.py  EnvironmentMesh.py  JGridAggregatedCellBox.py  JGridCellBox.py  MeshBuilder.py  Metadata.py  NeighbourGraph.py  TemporalCellGrid.py  __init__.py  cellbox.py  cli.py  crossing.py  crossing_refactor.py  crossing_smoothing.py  data_loaders.py  mesh.py  plot.py  (+13 more)
(+655 files in other folders)
